--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "A JSON directory of keyboard shortcuts, written in a consistent syntax.",
   "main": "parseShortcuts.js",
+  "repository": {
+    "type" : "git",
+    "url" : "https://github.com/cmdspaceorg/keyboard-shortcut-directory.git"
+  },
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
